--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 
+<head>
+    <link href="./index.css" rel"stylesheet">
+</head>
+
 <body>
   <h1>SUP!</h1>
   <p>Welcome to my website!</p>
